<resources>
    <string name="app_name">Food2Fork</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for recipe...</string>
    <string name="social_rank">Social Rank: %1$.0f </string>
</resources>
